# egzaminoUzduotis

./: CMakeLists.txt  README.md  article.txt  functions.cpp  header.h  main.cpp
input/: article.txt  tlds-alpha-by-domain.txt
output/: TER.txt  URL.txt  crossReference.txt  wordsTimes.txt
